# VerthashMiner

./: CMakeLists.txt  README.md  Violetminer-0.2.2-C10.2.rar
cmake/Modules/: Findjansson.cmake
src/: main.cpp
src/kernels/: sha3_512_256.cl  sha3_512_precompute.cl  verthash.cl
src/vhCore/: ConfigFile.cpp  ConfigFile.h  List.h  Miner.h  SHA256.h  ThreadQueue.h  Util.cpp  Utils.h  Verthash.cpp  Verthash.h
src/vhCuda/: verthash.cu
src/vhDevice/: ADLUtils.cpp  ADLUtils.h  CLUtils.h  ConfigGenerator.h  DeviceUtils.h  NVMLUtils.cpp  NVMLUtils.h  SYSFSUtils.cpp  SYSFSUtils.h
